# libhyper

./: meson.build
include/libhyper/: hyperbool.hh  hyperint.hh  hypermap.hh  hyperobject.hh  hyperstring.hh  type.hh  utils.hh
src/: main.cc
src/libhyper/: hyperbool.cc  hyperint.cc  hypermap.cc  hyperobject.cc  hyperstring.cc  utils.cc
subprojects/: libgc.wrap
